--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div class="title">숫자 맞추기 게임!!</div>
         <div id="result-area">결과를 확인해봐요!</div>
         <div id="chance-area">남은 찬스 : 5번</div>
+        <div id="history-area">입력했던 숫자</div>
         <div class="input-button">
             <input type="number" id="user-input"/>
             <button id="play-button">Go!</button>
